# peekscreen

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
src/: capture.rs  imaging.rs  main.rs
src/server/: mod.rs
