[package]
name = "screenshot-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.16", features = ["server", "transport-io", "macros"] }
xcap = "0.8"
image = "0.25"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
anyhow = "1"
