[package]
name = "peekscreen"
version = "0.1.0"
edition = "2024"
description = "MCP server for capturing window and screen screenshots. Works with Claude Desktop and any MCP-compatible client."
license = "MIT"
repository = "https://github.com/lee-to/peekscreen"
homepage = "https://github.com/lee-to/peekscreen"
readme = "README.md"
keywords = ["mcp", "screenshot", "screen-capture", "peekscreen", "ai"]
categories = ["command-line-utilities", "multimedia::images"]
exclude = [".ai-factory/", ".ai-factory.json", ".claude/", ".idea/", ".github/"]

[dependencies]
rmcp = { version = "0.16", features = ["server", "transport-io", "macros"] }
xcap = "0.8"
image = "0.25"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
anyhow = "1"
